[project]
name = "kinoml"
version = "0.1.0"
description = "Structure-informed machine learning for kinase modeling"
requires-python = ">=3.8,<3.12"
dependencies = [
  "pandas",
  "numpy < 2.0",
  "requests",
  "pint==0.19.2",
  "appdirs",
  "tqdm",
  "openff-toolkit @ git+https://github.com/openforcefield/openff-toolkit.git@0.14.5",
  "openff-units @ git+https://github.com/openforcefield/openff-units.git@0.2.0",
  "openff-utilities @ git+https://github.com/openforcefield/openff-utilities.git@v0.1.13",
  "xgboost",
  "openeye-toolkits>=2020.2.0",
  "bravado",
  "biopandas",
  "awkward",
  "pyarrow>=6.0.1",
  "mdanalysis>=2.0.0",
  "matplotlib",
  "ruamel.yaml",
  "dask",
  "dask-jobqueue",
  "papermill==2.2.*",
  "watermark",
  "torch>=1.8.0",
  "torch-geometric",
  "pytorch-lightning",
  "jupyterlab",
  "nglview",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "codecov",
  "nbval",
  "Sklearn_PyTorch",
  "opencadd @ git+https://github.com/volkamerlab/opencadd.git@v1.0.1",
  "openmm>=8.3.1",
  "cachetools>=5.5.2",
  "rdkit==2022.3.3",
]

[[tool.uv.sources.openeye-toolkits]]
index = "openeye-toolkits-conda"

[[tool.uv.sources.Sklearn_PyTorch]]
url = "https://github.com/ValentinFigue/Sklearn_PyTorch/archive/1b56a43e41de331ecdf73d08418f75bb34c9fa06.tar.gz"

[[tool.uv.index]]
name = "openeye-toolkits-conda"
url = "https://pypi.anaconda.org/OpenEye/simple"

[build-system]
requires = [ "setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

